# spar_lab_control

./: CMakeLists.txt  README.md  package.xml
include/: control.h
launch/: kinova_lab.launch
resources/: kinova_config.yaml  kinova_home.yaml  kinova_record.yaml
scripts/: lab.py  waypoint_record.py
src/: control.cpp
srv/: jointGoal.srv  waypoint_record.srv
